# iamai

./: .buildinfo  .gitignore  .gitpod.yml  .pdm-python  .pre-commit-config.yaml  .readthedocs.yaml  .release.js  .sourcery.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COPYING.html  Cargo.toml  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  README.rst  README_jp.md  README_ko.md  README_zh.md  __init__.py  _config.yml  build_credit.py  changelog.html  config.yaml   credit.json  credits.md  env.cpp  genindex.html  index.html  netlify.toml  objects.inv  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  (+11 more)
.doctrees/: COPYING.doctree  changelog.doctree  environment.pickle  index.doctree
.doctrees/pages/: index.doctree  introduction.doctree
.github/: FUNDING.yml  Testing.yml  build.yml  config.yml  copilot-instructions.md  dependabot.yml  dotnet-format.yml  release-drafter.yml
.github/workflows/: CI.yml  Testing.yml  build-api.yml  build.yml  build_credit.yml  changelog.yml  dependency-review.yml  docker.yml  docs.old.yml  docs.yml  dot-formatter.yml  generic_actions_handler.yml  maintain-one-comment.yml  nightly.yml  publish-docker.yml  pypi.yml  python-publish.yml  release-drafter.yml  release-packages.yml  release.yml  static.yml  test-pypi.yml  trans.yml  website-preview.yml
.iis/: applicationhost.config
.template/: Cargo.toml
_modules/: index.html
_modules/iamai/: adapter.html  bot.html  config.html  event.html  plugin.html
_posts/: 2021-06-26-welcome-to-jekyll.markdown
_sources/: index.md.txt
_sources/pages/: introduction.md.txt
blog/: test.md  this-is-a-test-blog.md
docs/: .pre-commit-config.yaml  COPYING.md  Makefile  README.md  changelog.md  conf.py  custom.css  index.md  middleware.js  middleware.ts  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  requirements.txt  style.css  tailwind.config.js  theme.config.js  theme.config.tsx  tsconfig.json
docs - 副本/: index.md
docs - 副本/guide/: index.md
docs.old/: .release.py  package.json
docs.old/docs/: changelog.md
docs/.next/: react-loadable-manifest.json  trace
docs/.vitepress/: config.ts
docs/_static/: kook-structures.drawio  manifest.json
docs/components/: as-array.ts  authors.tsx  button.tsx  description.tsx  heading.tsx  hero-section.tsx  image.tsx  input.tsx  link.tsx  meta-with-link.ts  meta.ts  newsletter.tsx  sitemap.ts  stitche.config.ts  store-card-list.tsx  tag-list.tsx  use_locales_map.js
docs/guide/: basic-config.md  cqhttp-adapter.md  dingtalk-adapter.md  mirai-adapter.md  plugin-basics.md
docs/pages/: _document.js  _meta.en-US.json  _meta.en.json  _meta.json  _meta.zh-CN.json  _meta.zh.json  about.en-US.mdx  about.mdx  about.zh-CN.mdx  blog.en-US.mdx  blog.zh-CN.mdx  index.en.mdx  index.md  index.mdx  index.zh-CN.mdx  index.zh.mdx  introduction.md  middleware.js  sitemap.xml.js  sitemap.xml.ts  store.en-US.mdx  store.mdx  store.zh-CN.mdx
docs/scripts/: build-api.sh
docs/source/: COPYING.md  COPYING.rst  changelog.md  changelog.rst  conf.py  credits.md  index.md  index.rst
docs/translation/: text.js
example/: config.example.toml  config.toml
example/data/: session.token
example/plugins/: _count_cqhttp.py  _global_state_test2.py  _schedule_decorator.py  _schedule_test.py
examples/: bot.py
examples/adapter/: test.py
examples/basic_example/: config.toml  main.py
examples/bottle_example/: config.toml  main.py
examples/onebot11_example/: config.toml  config_examples.py  main.py  run.py
examples/plugins/: _bradge-kook-cqhttp.py  _echo_cqhttp.py  _eval_kook.py  _hello_kook.py  _reload_plugin_cqhttp.py  _send_message_bililive.py  _test_random_scheduler.py  echo_cqhttp.py
exp/: config.toml  main.py
exp/data/: reply_data.json
iamai/: __init__.py  __main__.py  _core.pyi  bot.py  cli.py  config.py  const.py  dependencies.py  event.py  exceptions.py  i18n.py  libcore.pyi  log.py  message.py  plugin.py  typing.py  utils.py
iamai/adapter/: __init__.py  http_server_test_adapter.py  test.py  utils.py
pages/: index.html  introduction.html
pages/adapters/: cqhttp-adapter.html  dingtalk-adapter.html  mirai-adapter.html
pages/advanced/: hook-function.html  hot-reload.html  plugin-advanced.html  scheduler.html
pages/api/: adapter.html  bot.html  config.html  event.html  index.html  message.html  plugin.html
pages/basic/: basic-config.html  builtin-message.html  plugin-basics.html
pages/blog/: iamai-v3.html
pages/development/: contributing.html
pages/docs/: basic-config.html  builtin-message.html  cqhttp-adapter.html  dingtalk-adapter.html  getting-started.html  hook-function.html  hot-reload.html  index.html  mirai-adapter.html  plugin-advanced.html  plugin-basics.html  scheduler.html
pages/starting/: getting-started.html
retro/: __init__.py
retro/adapter/: __init__.py
retrofor_wut/: __init__.py  bot.py  config.py  event.py  exceptions.py  log.py  message.py  plugin.py  typing.py  utils.py
retrofor_wut/adapter/: __init__.py  http_server_test_adapter.py  test.py  utils.py
site-2/: package-lock.json
site/.vuepress/: config.js
site/_posts/: 2019-5-6-writing-a-vuepress-theme.md  vuepress-deploy.md
src/: engine.rs  lang.rs  lib.rs  main.rs  mapper.rs  plugin.rs
src/engine/: rule.rs
src/iamai/: __init__.py  __main__.py  bot.py  cli.py  config.py  engine.py  event.py  exceptions.py  lang.py  log.py  logger.py  message.py  plugin.py  rule.py  typing.py
test/: chatGPT.ipynb  config.toml  main.py  server.py  test.htm  test.ipynb  test.py
test/plugins/: _echo.py  _roll.py  bert-base.py  count.py  echo.py  github.py  roll.py
tests/: Batch File.bat  __init__.py  _plugin.py  config.example.toml  config.toml  config.yaml  config.yml  example.ipynb  knowledge.yaml  main.py  test_config.py  test_libcore.py  test_logger.py  test_minimal.py  test_plugin.py  test_rule_engine.py  test_rust_engine.py  test_textual_ui.py
tests/plugins/: _bradge-kook-cqhttp.py  (+23 more)
website/: docusaurus.config.js  package-lock.json  package.json
(+665 files in other folders)
