[package]
name = "iamai"
version = "0.1.6"
edition = "2021"
description = "Comprehensive AI Toolkit for Multimodal Learning and Cross-Platform Robotics."
license = "MIT"
documentation = "https://iamai.is-a.dev/"
homepage = "https://iamai.is-a.dev/"
repository = "https://github.com/retrofor/iamai"
authors = ["HsiangNianian"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["abi3-py39"] }
time = "0.3.36"
