[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "iamai"
dynamic = ["version"]
description = "Advanced Asynchronous Python Cross-Platform Rule-Driven Bot Framework"
authors = [{ name = "HsiangNianian", email = "i@jyunko.cn" }]
license = { text = "AGPL-3.0" }
readme.content-type = "text/x-rst"
readme.text = """See the `documents <https://iamai.is-a.dev/>`_."""
requires-python = ">=3.11"
keywords = [
    "Bot",
    "async",
    "rule-engine",
    "cross-platform",
    "discord",
    "telegram",
    "slack",
    "webhook",
    "rules",
    "workflow",
    "automation",
    "ai",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "aiohttp>=3.13.4",
    "aioredis>=2.0.1",
    "click>=8.1.7",
    "discord.py>=2.7.1",
    "loguru>=0.7.3",
    "pydantic>=2.10.1",
    "pyyaml>=6.0.3",
    "python-telegram-bot>=22.7",
    "redis>=5.0.1",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "slack-sdk>=3.41.0",
    "sqlalchemy>=2.0.49",
    "typing-extensions>=4.15.0",
    "websockets>=16.0",
    "asyncio-mqtt>=0.16.2",
    "celery>=5.6.3",
    "fastapi>=0.136.0",
    "uvicorn>=0.24.0",
    "textual>=6.1.0",
    "toml>=0.10.2",
]

[project.urls]
Homepage = "https://iamai.is-a.dev"
Documentation = "https://iamai.is-a.dev"
Repository = "https://github.com/retrofor/iamai"
Changelog = "https://iamai.is-a.dev/en/latest/changelog.html#"

[project.scripts]
iamai = "iamai.__main__:main" 

[tool.black]
target-version = ["py39", "py310", "py311"]

[dependency-groups]
lint = [
    "black>=26.3.1",
    "mypy>=1.13.0",
    "pylint>=3.3.1",
    "pylint-pydantic>=0.3.2",
    "ruff>=0.15.11",
]
docs = [
    "furo>=2025.12.19",
    "sphinx-autobuild>=2024.10.3",
    "sphinx>=9.0.4",
    "myst-parser>=5.0.0",
    "sphinx-design>=0.6.1",
    "sphinx-intl>=2.3.2",
    "sphinx-last-updated-by-git>=0.3.8",
]
test = [
    "nox>=2026.4.10",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.6.1",
]
dev = [
    "pyflakes>=3.4.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "maturin>=1.7.4",
    "nox>=2026.4.10"
]


[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "iamai._core"
python-package = "iamai"
python-source = "src"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
