[metadata]
name = retrofor_retro
version = 3.0.1
author = 简律纯
author_email = HsiangNianian@outlook.com
description = retrofor_retro
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/retrofor/retro
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
